--- a/Lexus/lexus_mine/less/begining.css
+++ b/Lexus/lexus_mine/less/begining.css
@@ -1,1 +1,1 @@
-.begining{position:relative}.begining .story_begining{background-image:url("../images/LEXUSSTORY/THEBEGINING/bg_s0.jpg")}
+.begining{background-color:#FFF}
