--- a/Lexus/lexus_mine/less/begining.less
+++ b/Lexus/lexus_mine/less/begining.less
@@ -1,10 +1,4 @@
-.begining {
-  position:relative;
-  .story_begining {
-    background-image: url("../images/LEXUSSTORY/THEBEGINING/bg_s0.jpg");
+.begining{
+background-color:#FFF;
 
-    ul {
-
-    }
-  }
 }
