--- a/Lexus/lexus_mine/less/begining.less
+++ b/Lexus/lexus_mine/less/begining.less
@@ -4,7 +4,7 @@
   position: relative;
   height: 100%;
   .st_begining {
-    background-image: url(../images/LEXUSSTORY/THEBEGINING/bg_s0.jpg);
+    background-image: url(../../asset/image/story/begining/bg_s0.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -16,7 +16,7 @@
       margin-left: -358.5px;
       margin-top: -90px;
       text-align: right;
-      >img {
+      li>img {
         position:absolute;
         top:300px;
         right:20px;
@@ -40,12 +40,114 @@
           top:0;
           left:0;
         }
+
       }
-      >li>img:nth-child(2) {
-        margin-top:60px;
-        margin-right:10px;
+
+
+	  >li+li {
+	  	>h3 {
+	  		position:absolute;
+	  		left:24%;
+	  	}
+	  	>p>img {
+	  		margin-top:150px;
+	  		margin-right:10px;
+	  	}
+	  }
+      >li:nth-child(3) {
+      	position:relative;
+      	>p {
+      		position:absolute;
+      		top:-130px;
+      		right: 330px;
+      	}
+      	>img {
+      		margin-top:-50px;
+      	}
       }
+      >li:nth-child(4) {
+      	>p:first-child {
+      		margin-top: -200px;
+      	}
+      }
+
     }
   }
+
+  .launching_begining {
+  	background-color:#1e1e1e;
+  	height:2400px;
+  	overflow:hidden;
+  	>ul {
+  		position:relative;
+  		top:150px;
+  		>li:nth-child(1) {
+	    background: #000;
+  		>div {
+  			background-image:url(../../asset/image/story/begining/bg_s3.jpg);
+            background-repeat:no-repeat;
+            height:360px;
+            margin-left:270px;
+  			>h3 {
+  			position:absolute;
+		    width: 717px;
+		    left: 50%;
+		    margin-left: -440px;
+		    top: -125px;
+  			}
+  			>p {
+  			width: 717px;
+		    margin: 0 auto;
+		    text-align: right;
+		    margin-left: 240px;
+		    padding-top: 5%;
+  			}
+  			}
+  		}
+  		>li+li {
+  			width: 717px;
+    		margin: 5% auto;
+  		}
+  		>li:nth-child(2) {
+  			width: 717px;
+    		margin: 4% auto;
+    		margin-bottom:130px;
+    		>p {
+    			float:left;
+    		}
+    		>img {
+    			margin-left:40px;
+    		}
+  		}
+  		>li:nth-child(3) {
+  			>div {
+		    position: relative;
+    		margin-top: 10%;
+    		>span {
+    			position:absolute;
+    			left:50%;
+    			top:50%;
+    			margin-left: -33px;
+    			margin-top: -33px;
+    		}
+  			}
+  			.play_video {
+    			display:none;
+    		}
+  		}
+  		>li:nth-child(4) {
+  			position:relative;
+  			>span {
+  				position:absolute;
+			    margin: 0 auto;
+			    top: 33%;
+			    left: 50%;
+
+  			}
+  		}
+  	}
+
+
+}
 
 }
