--- a/WebContent/asset/less/story/project.less
+++ b/WebContent/asset/less/story/project.less
@@ -1,13 +1,162 @@
 // main: ../import.less
 
+// #st_project {
+// 	margin-left:180px;
+// 	position:relative;
+// 	background-color:#F00;
+// 	line-height:100%;
+// 	letter-spacing:0.2px;
+// 	word-spacing:1.5px;
+// 	.project-menu {
+// 		width:1800px;
+// 		height:72px;
+// 		left:135px;
+// 		position:fixed;
+// 		top:0;
+// 		z-index:1;
+// 		background-color:#FFF;
+// 		ul {
+// 			width:1000px;
+// 			height:70px;
+// 			padding:0;
+// 			margin:0 450px 3px 415px;
+// 			li {
+// 				float:left;
+// 				width:210px;
+// 				margin:0 50px 0 0;
+// 				font-size:13px;
+// 				color:#ababab;
+// 				text-align:center;
+// 				background-color:#FFF;
+// 				a {
+// 					display:block;
+// 					width:100%;
+// 					padding:31px 0 23px 0;
+// 				}
+// 				a:hover {
+// 						display:block;
+// 						border-bottom:4px #000 solid;
+// 						background-color:#FFF;
+// 						margin:0 0 -4px 0;
+// 				}
+// 			}
+//
+// 			li:last-child {
+// 					margin-right:0;
+// 			}
+// 		}
+// 	}
+// 	.project_main {
+// 		width:100%;
+// 		position:relative;
+// 		h2 {
+// 			position:absolute;
+// 			z-index:10;
+// 			top:380px;
+// 			left:45%;
+// 			margin-left:-322px;
+// 		}
+// 		ul {
+// 			position:relative;
+// 			margin-top:0;
+// 			margin-bottom:0;
+// 			padding-top:72px;
+// 			li {
+// 				float:left;
+// 				position:relative;
+// 				width:574px;
+// 				overflow:hidden;
+// 				img:first-child {
+// 					position:absolute;
+// 					left:50%;
+// 					top:77%;
+// 					margin-left:-135px;
+// 				}
+// 				a>.img-btn {
+// 					position:absolute;
+// 					left:50%;
+// 					top:83%;
+// 					margin-left:-135px;
+// 				}
+// 				img:nth-child(3) {
+// 				    margin-left:-187.833px;
+//     				width:auto;
+//     				height:878px;
+// 				}
+// 			}
+// 			li:last-child {
+// 				img:nth-child(3) {
+// 					margin-left:-94px;
+// 					width:auto;
+// 					height:878px;
+// 				}
+// 			}
+// 		}
+// 	}
+// 	.amazing-in-motion {
+// 		position:relative;
+// 		.motion-con-1 {
+// 			position:relative;
+// 			.fig-con {
+// 				position:fixed;
+// 				left:0;
+// 				width:100%;
+// 				img {
+// 					width:1903px;
+// 	    		height:1072px;
+// 					position:absolute;
+// 					top:60px;
+// 					left:90px;
+// 				}
+// 			}
+// 			.main-txt {
+// 				position:relative;
+// 				left:680px;
+// 				top:205px;
+// 				.btn_play {
+// 					position:absolute;
+// 					left:150px;
+// 					top:190px;
+// 				}
+// 				.btn-next-arr {
+// 					background:url('../../asset/image/story/project/arr_dn.png') 0 0 no-repeat;
+// 					position:fixed;
+// 					left:48.5%;
+// 					bottom:15px;
+// 					width:34px;
+// 					height:60px;
+// 					margin-left:100px;
+// 					overflow:hidden;
+// 					text-indent:-9999px;
+// 					&:hover {
+// 						color:#222;
+// 					}
+// 				}
+// 			}
+// 		}
+// 		.motion-con-2 {
+// 			position:relative;
+// 			.fig-content {
+// 				position:relative;
+// 				top:770px;
+// 			}
+// 		}
+// 	}
+//  .lexus-short-film-con{
+//  }
+//  .lexus-design-award{
+//  }
+// }
+
+
 #st_project {
 	margin-left:180px;
 	position:relative;
-	background-color:#F00;
+	background-color:#000;
 	line-height:100%;
 	letter-spacing:0.2px;
 	word-spacing:1.5px;
-	.subfloat_menu {
+	.project-menu {
 		width:1800px;
 		height:72px;
 		left:135px;
@@ -47,126 +196,120 @@
 		}
 	}
 	.project_main {
-		width:100%;
-		position:relative;
-		h2 {
-			position:absolute;
-			z-index:10;
-			top:380px;
-			left:45%;
-			margin-left:-322px;
-		}
-		ul {
+			width:100%;
 			position:relative;
-			margin-top:0;
-			margin-bottom:0;
-			padding-top:72px;
-			li {
-				float:left;
+			h2 {
+				position:absolute;
+				z-index:10;
+				top:380px;
+				left:45%;
+				margin-left:-322px;
+			}
+			ul {
 				position:relative;
-				width:574px;
-				overflow:hidden;
-				img:first-child {
-					position:absolute;
-					left:50%;
-					top:77%;
-					margin-left:-135px;
+				margin-top:0;
+				margin-bottom:0;
+				padding-top:72px;
+				li {
+					float:left;
+					position:relative;
+					width:574px;
+					overflow:hidden;
+					img:first-child {
+						position:absolute;
+						left:50%;
+						top:77%;
+						margin-left:-135px;
+					}
+					a>.img-btn {
+						position:absolute;
+						left:50%;
+						top:83%;
+						margin-left:-135px;
+					}
+					img:nth-child(3) {
+					    margin-left:-187.833px;
+	    				width:auto;
+	    				height:878px;
+					}
 				}
-				a>.img-btn {
-					position:absolute;
-					left:50%;
-					top:83%;
-					margin-left:-135px;
-				}
-				img:nth-child(3) {
-				    margin-left:-187.833px;
-    				width:auto;
-    				height:878px;
-				}
-			}
-			li:last-child {
-				img:nth-child(3) {
-					margin-left:-94px;
-					width:auto;
-					height:878px;
+				li:last-child {
+					img:nth-child(3) {
+						margin-left:-94px;
+						width:auto;
+						height:878px;
+					}
 				}
 			}
 		}
-	}
 	.amazing-in-motion {
-		position:relative;
 		.motion-con-1 {
-			position:relative;
+			width:1903px;
+			height:978px;
 			.fig-con {
 				position:fixed;
 				left:0;
 				width:100%;
 				img {
 					width:1903px;
-	    		height:1072px;
+					height:1072px;
 					position:absolute;
 					top:60px;
 					left:90px;
+					opacity:1;
 				}
 			}
 			.main-txt {
-				position:relative;
-				left:680px;
-				top:205px;
-				.btn_play {
-					position:absolute;
-					left:150px;
-					top:190px;
-				}
-				.btn-next-arr {
-					background:url('../../asset/image/story/project/arr_dn.png') 0 0 no-repeat;
-					position:fixed;
-					left:48.5%;
-					bottom:15px;
-					width:34px;
-					height:60px;
-					margin-left:100px;
-					overflow:hidden;
-					text-indent:-9999px;
-					&:hover {
-						color:#222;
-					}
-				}
+				width:354px;
+				height:162px;
 			}
 		}
 		.motion-con-2 {
-			position:relative;
+			width:1903px;
+			height:800px;
 			.fig-content {
-				position:relative;
-				top:770px;
+				img {
+					width:1747px;
+					height:984px;
+				}
+			}
+			.fig-txt {
+
+			}
+		}
+		.motion-con-3 {
+			width:1903px;
+			height:1140px;
+			.fig-content {
+				img {
+					width:1747px;
+					height:1403px;
+				}
+			}
+		}
+		.motion-con-4 {
+			width:1723px;
+			height:3305px;
+			.hover_wrap {
+				width:780px;
+				margin: 0 auto;
+				padding: 80px 5px 118px 5px;
+			}
+		}
+		.motion-con-5 {
+			width:1723px;
+			height:795px;
+			.motion_wrap {
+				width:760px;
+				margin: 0 auto;
+				padding: 80px 0 118px 0;
 			}
 		}
 	}
- .lexus-short-film-con{
- }
- .lexus-design-award{
- }
-}
+	.lexus-short-film-con {
 
-//#st_project2{
-//	.project-menu{
-//		width:100%;
-//		height:72px;
-//		background-color: black;
-//		a{
-//			display:inline-block;
-//		}
-//	}
-//	.project-view{
-//		ul{
-//			li{
-//			  display:none;
-//			  &.on{
-//			  	display:block;
-//			  	width:100%;
-//			  	height:1000px;
-//			  }
-//			}
-//		}
-//	}
-//}
+	}
+	.lexus-design-award {
+
+	}
+}
