--- a/WebContent/asset/less/import.less
+++ b/WebContent/asset/less/import.less
@@ -13,7 +13,7 @@
 @import "story/begining.less";
 @import "story/philosophy.less";
 @import "story/project.less";
-//@import "story/day.less";
+@import "story/day.less";
 //@import "story/journey.lsess";
 
 //라연 시작
