--- a/WebContent/asset/less/story/project.less
+++ b/WebContent/asset/less/story/project.less
@@ -1,153 +1,5 @@
 // main: ../import.less
 
-// #st_project {
-// 	margin-left:180px;
-// 	position:relative;
-// 	background-color:#F00;
-// 	line-height:100%;
-// 	letter-spacing:0.2px;
-// 	word-spacing:1.5px;
-// 	.project-menu {
-// 		width:1800px;
-// 		height:72px;
-// 		left:135px;
-// 		position:fixed;
-// 		top:0;
-// 		z-index:1;
-// 		background-color:#FFF;
-// 		ul {
-// 			width:1000px;
-// 			height:70px;
-// 			padding:0;
-// 			margin:0 450px 3px 415px;
-// 			li {
-// 				float:left;
-// 				width:210px;
-// 				margin:0 50px 0 0;
-// 				font-size:13px;
-// 				color:#ababab;
-// 				text-align:center;
-// 				background-color:#FFF;
-// 				a {
-// 					display:block;
-// 					width:100%;
-// 					padding:31px 0 23px 0;
-// 				}
-// 				a:hover {
-// 						display:block;
-// 						border-bottom:4px #000 solid;
-// 						background-color:#FFF;
-// 						margin:0 0 -4px 0;
-// 				}
-// 			}
-//
-// 			li:last-child {
-// 					margin-right:0;
-// 			}
-// 		}
-// 	}
-// 	.project_main {
-// 		width:100%;
-// 		position:relative;
-// 		h2 {
-// 			position:absolute;
-// 			z-index:10;
-// 			top:380px;
-// 			left:45%;
-// 			margin-left:-322px;
-// 		}
-// 		ul {
-// 			position:relative;
-// 			margin-top:0;
-// 			margin-bottom:0;
-// 			padding-top:72px;
-// 			li {
-// 				float:left;
-// 				position:relative;
-// 				width:574px;
-// 				overflow:hidden;
-// 				img:first-child {
-// 					position:absolute;
-// 					left:50%;
-// 					top:77%;
-// 					margin-left:-135px;
-// 				}
-// 				a>.img-btn {
-// 					position:absolute;
-// 					left:50%;
-// 					top:83%;
-// 					margin-left:-135px;
-// 				}
-// 				img:nth-child(3) {
-// 				    margin-left:-187.833px;
-//     				width:auto;
-//     				height:878px;
-// 				}
-// 			}
-// 			li:last-child {
-// 				img:nth-child(3) {
-// 					margin-left:-94px;
-// 					width:auto;
-// 					height:878px;
-// 				}
-// 			}
-// 		}
-// 	}
-// 	.amazing-in-motion {
-// 		position:relative;
-// 		.motion-con-1 {
-// 			position:relative;
-// 			.fig-con {
-// 				position:fixed;
-// 				left:0;
-// 				width:100%;
-// 				img {
-// 					width:1903px;
-// 	    		height:1072px;
-// 					position:absolute;
-// 					top:60px;
-// 					left:90px;
-// 				}
-// 			}
-// 			.main-txt {
-// 				position:relative;
-// 				left:680px;
-// 				top:205px;
-// 				.btn_play {
-// 					position:absolute;
-// 					left:150px;
-// 					top:190px;
-// 				}
-// 				.btn-next-arr {
-// 					background:url('../../asset/image/story/project/arr_dn.png') 0 0 no-repeat;
-// 					position:fixed;
-// 					left:48.5%;
-// 					bottom:15px;
-// 					width:34px;
-// 					height:60px;
-// 					margin-left:100px;
-// 					overflow:hidden;
-// 					text-indent:-9999px;
-// 					&:hover {
-// 						color:#222;
-// 					}
-// 				}
-// 			}
-// 		}
-// 		.motion-con-2 {
-// 			position:relative;
-// 			.fig-content {
-// 				position:relative;
-// 				top:770px;
-// 			}
-// 		}
-// 	}
-//  .lexus-short-film-con{
-//  }
-//  .lexus-design-award{
-//  }
-// }
-
 
 #st_project {
 	overflow-x: hidden;
@@ -722,13 +574,37 @@
 					}
 					>p {
 						position:relative;
-						left:225px;
-						top:60px;
+						left:227px;
+						top:55px;
 					}
 					dl {
 						position:relative;
-						right:100px;
-						bottom:175px;
+						right:90px;
+						bottom:190px;
+						dd {
+							p {
+								margin-top:15px;
+							}
+						}
+						.btn-area {
+								position:relative;
+								top:40px;
+							a {
+								display:block;
+								width:266px;
+								height:58px;
+								text-indent:-9999px;
+
+							}
+							a:first-child {
+								background:url('../../asset/image/story/project/btn_design_award_seemore.jpg') 0 0 no-repeat;
+								margin-bottom:8px;
+							}
+							a:last-child {
+								background:url('../../asset/image/story/project/btn_design_award_gojoin.jpg') 0 0 no-repeat;
+
+							}
+						}
 					}
 				}
 			}
@@ -743,6 +619,16 @@
 		    left: 50%;
 		    margin-left: -710px;
 		    width: 1420px;
+				.poster-txt {
+					position:absolute;
+					top:100px;
+					left:460px;
+					width:501px;
+					text-align:center;
+					p {
+						margin-top:39px;
+					}
+				}
 			}
 		}
 		.award-con-4 {
@@ -752,7 +638,57 @@
 			background-color:#FFF;
 			overflow:hidden;
 			.flin-list-con_wrap {
-				margin-left:470px;
+				margin-left:480px;
+				>img { margin:93px 0 90px 0; }
+				ol {
+					width:760px;
+					height:1824px;
+					position:relative;
+
+					li {
+						float:left;
+						height:356px;
+						.first-child {
+							height:316px;
+						}
+						.last-child {
+							height:auto;
+
+						}
+						// li:nth-child(1) {
+						// 	height:316px;
+						// }
+						// li:nth-child(5) {
+						// 	height:auto;
+						// }
+						ul {
+
+								.img-con {
+									margin-right:35px;
+									margin-bottom:45px;
+								}
+								.txtpic-con {
+									width:300px;
+									>img:first-child {
+										height:160px;
+									}
+									img:last-child {
+										margin-top:10px;
+									}
+								}
+								.year-con {
+									position:absolute;
+									right:-2px;
+								}
+
+						}
+					}
+				}
+				.txtpic-con {
+					img:last-child {
+						display:block;
+					}
+				}
 			}
 		}
 	}
