--- a/WebContent/asset/less/import.less
+++ b/WebContent/asset/less/import.less
@@ -16,6 +16,8 @@
 @import "story/day.less";
 @import "story/journey.less";
 @import "service/customer.less";
+@import "service/lxsv.less";
+
 
 //라연 시작
 @import "hybrid/hybrid.less";
