--- a/WebContent/asset/less/story/journey.less
+++ b/WebContent/asset/less/story/journey.less
@@ -249,6 +249,17 @@
             }
           }
         }
+        >span {
+          display:block;
+          width:220px;
+          height:50px;
+          position:relative;
+          top:20px;
+          left:35px;
+          background: url('../../asset/image/story/journey/btn_kv.jpg') 0 0 no-repeat;
+          text-indent:-999px;
+          overflow:hidden;
+        }
       }
     }
   }
