--- a/WebContent/asset/less/story/day.less
+++ b/WebContent/asset/less/story/day.less
@@ -278,6 +278,10 @@
           }
           .third {
             width:230px;
+            a:hover {
+              background-color:#FFF;
+              color:#000;
+            }
           }
           li{
             float:left;
