--- a/WebContent/asset/less/story/project.less
+++ b/WebContent/asset/less/story/project.less
@@ -2,7 +2,8 @@
 
 
 #st_project {
-	overflow-x:hidden;
+	// overflow-x:hidden;
+
 	margin-left:180px;
 	position:relative;
 	background-color:#000;
@@ -240,6 +241,7 @@
 					position:relative;
 					img:nth-child(2) {
 						margin-left:-7px;
+						top:160px;
 					}
 					img:nth-child(3) {
 						top:163px;
@@ -364,16 +366,16 @@
 				}
 			}
 			.btn-next-arr {
-				bottom:12px;
+				bottom:30px;
 			}
 		}
 		.film-con-2 {
 			width:1903px;
-			height:965px;
+			height:1200px;
 			background-color: #262626;
 			position:relative;
 			overflow:hidden;
-			// overflow:hidden;
+			top:140px;
 			.apply_wrap {
 				position:relative;
 				width:1420px;
@@ -554,9 +556,10 @@
 		}
 		.award-con-2 {
 			width:1903px;
-			height:940px;
+			height:1200px;
 			position:relative;
 			background-color:#262626;
+			top:140px;
 			.point_wrap {
 				position:relative;
 		    width:1420px;
