--- a/WebContent/asset/less/story/journey.less
+++ b/WebContent/asset/less/story/journey.less
@@ -12,6 +12,7 @@
     right:0;
     left:0;
     bottom:0;
+    background-color:#000;
     // .close_btn {
     //   z-index:10;
       a {
@@ -36,6 +37,10 @@
           text-indent:-9999px;
           font-size:0;
         }
+      }
+      iframe {
+        position:relative;
+        left:120px;
       }
     // }
   }
