--- a/WebContent/asset/less/story/day.less
+++ b/WebContent/asset/less/story/day.less
@@ -5,6 +5,50 @@
   overflow-x: hidden;
   overflow-y: hidden;
 
+  .popopen {
+    position:fixed;
+    width:1903px;
+    height:950px;
+    z-index:5;
+    top:0;
+    right:0;
+    left:0;
+    bottom:0;
+    // .close_btn {
+    //   z-index:10;
+      a {
+        z-index:10;
+        width:60px;
+        height:60px;
+        background: url('../../asset/image/service/btn_close_bg.png') repeat 0 0;
+        opacity:0.5;
+        &:hover {
+          opacity:1;
+          color:#fff;
+        }
+        &:link {
+          color:#666;
+        }
+        >.cl_btn {
+          left:20px;
+          top:20px;
+          width:20px;
+          height:20px;
+          background:url('../../asset/image/service/sprite_common.png') no-repeat -95px -163px;
+          text-indent:-9999px;
+          font-size:0;
+        }
+      }
+      iframe {
+        width:100%;
+        height:100%;
+      }
+    // }
+  }
+
+
+
+
   .day-con-1 {
     height:1370px;
     position:relative;
