--- a/WebContent/asset/less/story/philosophy.less
+++ b/WebContent/asset/less/story/philosophy.less
@@ -1,6 +1,56 @@
-#st_brand {	
+// main: ../import.less
+
+
+#st_brand {
 	margin-left:180px;
 	position:relative;
+
+
+
+
+	.popopen {
+    position:fixed;
+    width:1903px;
+    height:950px;
+    z-index:5;
+    top:0;
+    right:0;
+    left:0;
+    bottom:0;
+    // .close_btn {
+    //   z-index:10;
+      a {
+        z-index:10;
+        width:60px;
+        height:60px;
+        background: url('../../asset/image/service/btn_close_bg.png') repeat 0 0;
+        opacity:0.5;
+        &:hover {
+          opacity:1;
+          color:#fff;
+        }
+        &:link {
+          color:#666;
+        }
+        >.cl_btn {
+          left:20px;
+          top:20px;
+          width:20px;
+          height:20px;
+          background:url('../../asset/image/service/sprite_common.png') no-repeat -95px -163px;
+          text-indent:-9999px;
+          font-size:0;
+        }
+      }
+			iframe {
+				width:100%;
+				height:100%;
+			}
+    // }
+  }
+
+
+
 	.st_phil {
 		border:1px #F00 solid;
 		position:relative;
@@ -18,7 +68,7 @@
 		h2 {
 			position:absolute;
 		    left: 515px;
-    		top: 335px;			
+    		top: 335px;
 		}
 	}
 	.product_phil {
@@ -26,28 +76,34 @@
 		height:1470px;
 		background:#1e1e1e;
 		ul {
-		position:relative; 
+		position:relative;
     	left:500px;
     	top:150px;
-    	span {
-    		img {
-    			margin:50px 0 0 22px;
-    		}
-    		a {
-    			position:absolute;
-    			left:350px;
-    			top:185px;
-    			margin-left:-33px;
-    			margin-top:-33px;
-    			&:link {
-    				color:#666;
-    				text-decoration:none;
-    			}
-    		}
-    	}
-    	p {
-    		margin:40px 0 0 25px;
-    	}
+			li:first-child {
+				a {
+					// position: relative;
+					// margin: 50px 0 0 22px;
+					// display: block;
+	    		>img:first-child {
+	    			margin:50px 0 0 22px;
+	    		}
+	    		.btn_play {
+	    			position:absolute;
+	    			left:350px;
+	    			top:230px;
+	    			margin-left:-33px;
+	    			margin-top:-33px;
+	    		}
+					&:link {
+						color:#666;
+						text-decoration:none;
+					}
+	    	}
+	    	p {
+	    		margin:40px 0 0 25px;
+	    	}
+			}
+
     	li:nth-child(2) {
 	    		h3 {
 	    		position:relative;
@@ -66,7 +122,7 @@
 	    	}
     	  }
 		}
-		
+
 	}
 	.design_phil {
 		position:relative;
@@ -152,7 +208,7 @@
 			top:-300px;
 			left:510px;
 		}
-		
+
 	}
 	.covenant_phil {
 		position:relative;
@@ -179,7 +235,7 @@
 			left:490px;
 		}
 	}
-	
+
 
 
 }
