--- a/WebContent/asset/less/story/project.less
+++ b/WebContent/asset/less/story/project.less
@@ -1,9 +1,7 @@
 // main: ../import.less
 
-
 #st_project {
 	// overflow-x:hidden;
-
 	margin-left:180px;
 	position:relative;
 	background-color:#000;
@@ -11,6 +9,97 @@
 	letter-spacing:0.2px;
 	word-spacing:1.5px;
 	height:100%;
+
+
+	.popopen_hover {
+		position:fixed;
+		width:100%;
+		height:100%;
+		z-index:5;
+		top:0;
+		right:0;
+		left:0;
+		bottom:0;
+		background-color:#000;
+		// .close_btn {
+		//   z-index:10;
+			a {
+				z-index:10;
+				width:60px;
+				height:60px;
+				background: url('../../asset/image/service/btn_close_bg.png') repeat 0 0;
+				opacity:0.5;
+				&:hover {
+					opacity:1;
+					color:#fff;
+				}
+				&:link {
+					color:#666;
+				}
+				>.cl_btn {
+					left:20px;
+					top:20px;
+					width:20px;
+					height:20px;
+					background:url('../../asset/image/service/sprite_common.png') no-repeat -95px -163px;
+					text-indent:-9999px;
+					font-size:0;
+				}
+			}
+			// iframe {
+			// 	position:relative;
+			// 	left:100px;
+			// }
+		// }
+	}
+
+
+
+
+
+
+	.popopen {
+		position:fixed;
+		width:100%;
+		height:100%;
+		z-index:5;
+		top:0;
+		right:0;
+		left:0;
+		bottom:0;
+		background-color:#000;
+		// .close_btn {
+		//   z-index:10;
+			a {
+				z-index:10;
+				width:60px;
+				height:60px;
+				background: url('../../asset/image/service/btn_close_bg.png') repeat 0 0;
+				opacity:0.5;
+				&:hover {
+					opacity:1;
+					color:#fff;
+				}
+				&:link {
+					color:#666;
+				}
+				>.cl_btn {
+					left:20px;
+					top:20px;
+					width:20px;
+					height:20px;
+					background:url('../../asset/image/service/sprite_common.png') no-repeat -95px -163px;
+					text-indent:-9999px;
+					font-size:0;
+				}
+			}
+			iframe {
+				position:relative;
+				left:100px;
+			}
+		// }
+	}
+
 	.btn-next-arr {
 		display:block;
 		background:url('../../asset/image/story/project/arr_dn.png') 0 0 no-repeat;
@@ -329,7 +418,7 @@
 					}
 					li:last-child {margin-right:0;}
 				}
-				.btn_view_detail {
+				>.btn_view_detail {
 					display:block;
 					width:200px;
 					height:40px;
@@ -416,7 +505,7 @@
 		}
 		.film-con-3 {
 			width:1903px;
-			height:1362px;;
+			height:1362px;
 			background-color:#FFF;
 			position:relative;
 			overflow:hidden;
