--- a/thelexus/WebContent/asset/less/gnb.less
+++ b/thelexus/WebContent/asset/less/gnb.less
@@ -1,9 +1,9 @@
 #gnb-nav{
- position: fixed; 
+ position: fixed;
  z-index:2;
  width:180px;
  height:100%;
- left:0; 
+ left:0;
  background-color:#000;
  transition: .5s;
  header{
@@ -55,7 +55,7 @@
          font-weight: bold;
          margin-bottom:8px;
          i{
-           .ibox()();
+          //  .ibox()();
          }
        }
        a{
