--- a/WebContent/asset/less/story/day.less
+++ b/WebContent/asset/less/story/day.less
@@ -129,8 +129,8 @@
         float:left;
         // >img {width:100%; border:0; vertical-align:top;}
         .pic-top {
-          width:100%;
-          float:left;
+          // width:50%;
+          // float:left;
           img {
             width:100%;
           }
@@ -186,13 +186,15 @@
 
   }
   .day-con-3 {
-    height:420px;
+    // height:420px;
     background-color:pink;
+    padding: 50px 0 56px 0;
     .join-list_wrap {
       height:420px;
       padding:50px 0 56px 0;
       position:relative;
       left:27.5%;
+      top:150px;
       h3 {
         color:#000;
         font-size:24px;
